# todoapp-fastapi-clean-architecture

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
frontend/: app.js  index.html  style.css
src/: exceptions.py  logging.py  main.py
src/auth/: controller.py  service.py
src/database/: core.py
src/entities/: __init__.py  todo.py  user.py
src/todos/: controller.py  model.py  service.py
src/users/: controller.py  service.py  validators.py
tests/: conftest.py  test_auth_service.py  test_users_service.py
